<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailTaskActivity">

    <TextView
            android:text="@string/title"
            android:layout_width="0dp" android:textSize="24sp"
            android:layout_height="wrap_content" android:textStyle="bold"
            android:id="@+id/tvTitleLabel"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="0dp" android:textSize="18sp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleLabel" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/completed"
            android:layout_width="0dp" android:textSize="24sp"
            android:layout_height="wrap_content" android:textStyle="bold"
            android:id="@+id/tvCompletedLabel" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            app:layout_constraintBottom_toBottomOf="@+id/tvCompletedLabel"
            app:layout_constraintTop_toTopOf="@+id/tvCompletedLabel"
            app:layout_constraintStart_toEndOf="@+id/tvAssignedLabel" android:layout_marginStart="16dp"/>

    <TextView
            android:text="@string/assigned"
            android:layout_width="0dp" android:textSize="24sp"
            android:layout_height="wrap_content" android:textStyle="bold"
            android:id="@+id/tvAssignedLabel" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCompletedLabel" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAssigned" app:layout_constraintStart_toEndOf="@+id/tvAssignedLabel"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/tvAssignedLabel"
            app:layout_constraintBottom_toBottomOf="@+id/tvAssignedLabel" android:text="@string/hint_assigned"/>

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:prompt="@string/spinnerFirst"
            android:id="@+id/spinner" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/tvAssignedLabel"
            android:layout_marginTop="32dp" android:layout_marginEnd="32dp"/>
    <Button
            android:text="@string/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner" android:layout_marginTop="32dp"/>
</android.support.constraint.ConstraintLayout>